Popup closes when dragging and letting RMB go while mouse is still moved #84701

Closed
opened 2021-01-14 09:23:48 +01:00 by Oleg · 33 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.79

Blender Version
Broken: version: 2.92.0 Beta, branch: master, commit date: 2021-01-13 23:55, hash: 5804bf25bd
Worked: version: 2.92.0 Alpha, branch: master, commit date: 2021-01-11 00:07, hash: af88d23ffa

Short description of error
Popus randomly closes when changing values with ctrl or mouse

Exact steps for others to reproduce the error

  • Open a popup of your choice, e.g. a color picker or the Adjust Last Operation panel
  • Edit a numeric property by dragging with {key LMB} pressed.

While dragging, let {key LMB} go before reaching min/max but continue to move the mouse. Even when the mouse cursor still remains over the popup, it closes.

Original description:

  • Open default scene
  • Delete sides from cube
  • Select borders and use Bridge Edge Loops operator
  • Press F9 and try to change some values

Broken GIF:
PopupsBroken.gif

Working GIF:
PopupsWorking.gif

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.79 **Blender Version** Broken: version: 2.92.0 Beta, branch: master, commit date: 2021-01-13 23:55, hash: `5804bf25bd` Worked: version: 2.92.0 Alpha, branch: master, commit date: 2021-01-11 00:07, hash: `af88d23ffa` **Short description of error** Popus randomly closes when changing values with ctrl or mouse **Exact steps for others to reproduce the error** - Open a popup of your choice, e.g. a color picker or the *Adjust Last Operation* panel - Edit a numeric property by dragging with {key LMB} pressed. # While dragging, let {key LMB} go before reaching min/max but continue to move the mouse. Even when the mouse cursor still remains over the popup, it closes. Original description: - Open default scene - Delete sides from cube - Select borders and use Bridge Edge Loops operator - Press F9 and try to change some values Broken GIF: ![PopupsBroken.gif](https://archive.blender.org/developer/F9578271/PopupsBroken.gif) Working GIF: ![PopupsWorking.gif](https://archive.blender.org/developer/F9578273/PopupsWorking.gif)
Author

Added subscriber: @DotBow

Added subscriber: @DotBow

#85354 was marked as duplicate of this issue

#85354 was marked as duplicate of this issue

#84741 was marked as duplicate of this issue

#84741 was marked as duplicate of this issue
Oleg changed title from Popups randomly closes when changing some values to Popups randomly closes when changing values 2021-01-14 09:25:25 +01:00
Author

This version also affected:
2.93.0 Alpha, branch: master, commit date: 2021-01-13 23:58, hash: 0876829e7a

This version also affected: 2.93.0 Alpha, branch: master, commit date: 2021-01-13 23:58, hash: `0876829e7a`

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I'm unable to reproduce the problem on Windows. I've tested:

  • 0876829e7a (commit you've referenced as affected)
  • 3e4dd7b00064 (most recent master commit at the time)
  • c13383da41 (last daily build 2.93)
  • 5804bf25bd (last daily build of 2.92, commit you've referenced as affected)
    and all appear to be working fine. I can press {key F9} and the menu stays open as long as I keep the mouse pointer on the popup.

Could you please open Blender's installation directory and double click on the blender_factory_startup.cmd. This will start Blender with temporary factory defaults. Please try to perform the same operations and check if the problem still occurs.

I'm unable to reproduce the problem on Windows. I've tested: - `0876829e7a` (commit you've referenced as affected) - `3e4dd7b00064` (most recent master commit at the time) - `c13383da41` (last daily build 2.93) - `5804bf25bd` (last daily build of 2.92, commit you've referenced as affected) and all appear to be working fine. I can press {key F9} and the menu stays open as long as I keep the mouse pointer on the popup. Could you please open Blender's installation directory and double click on the `blender_factory_startup.cmd`. This will start Blender with temporary factory defaults. Please try to perform the same operations and check if the problem still occurs.
Author

Hi!
Same issue, consistently reproducible

blender_debug_output.txt

blender_system_info.txt

Hi! Same issue, consistently reproducible [blender_debug_output.txt](https://archive.blender.org/developer/F9578338/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F9578339/blender_system_info.txt)

Are you using a mouse as input device?

Are you using a mouse as input device?
Author

In #84701#1093358, @rjg wrote:
Are you using a mouse as input device?

Yeap, weird... I can reproduce it consistently on all latest 5 daily builds. When going to earlier builds everything workes fine.

> In #84701#1093358, @rjg wrote: > Are you using a mouse as input device? Yeap, weird... I can reproduce it consistently on all latest 5 daily builds. When going to earlier builds everything workes fine.

I think I can reproduce this now. The key part is to let the {key LMB} go, while still moving the mouse.

I think I can reproduce this now. The key part is to let the {key LMB} go, while still moving the mouse.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Robert Guetzkow changed title from Popups randomly closes when changing values to Popup closes when dragging and letting RMB go while mouse is still moved 2021-01-15 09:41:36 +01:00

Added subscriber: @slowburn

Added subscriber: @slowburn
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'
Member

I do not understand what this has to do with {key RMB}? Why would you use that for changing a value?
It's unclear to me how I'm supposed to recreate this.

I do not understand what this has to do with {key RMB}? Why would you use that for changing a value? It's unclear to me how I'm supposed to recreate this.

@JulianEisel that's my mistake. {key RMB} is nonsense, it's {key LMB}.

  • Open a popup of your choice
  • Edit a property by dragging with {key LMB} pressed.

While dragging, let {key LMB} go and continue to move the mouse. Even when the mouse cursor still remains over the popup, it closes.

If the mouse drag stops before releasing {key LMB} the popup remains open as expected.

@JulianEisel that's my mistake. {key RMB} is nonsense, it's {key LMB}. - Open a popup of your choice - Edit a property by dragging with {key LMB} pressed. # While dragging, let {key LMB} go and continue to move the mouse. Even when the mouse cursor still remains over the popup, it closes. If the mouse drag stops before releasing {key LMB} the popup remains open as expected.

In #84701#1104906, @rjg wrote:
If the mouse drag stops before releasing {key LMB} the popup remains open as expected.

For me that's not always the case and popup still disappears even if I stop moving the mouse. Although it's quite rare. Color picker popup is the most annoying in this regard, and selecting a color directly in the color wheel always closes the popup, no matter what.
Also the window that you get in paint and sculpt modes when pressing {key RMB} is unaffected by this bug, so that might be another clue for the possible cause.

> In #84701#1104906, @rjg wrote: > If the mouse drag stops before releasing {key LMB} the popup remains open as expected. For me that's not always the case and popup still disappears even if I stop moving the mouse. Although it's quite rare. Color picker popup is the most annoying in this regard, and selecting a color directly in the color wheel always closes the popup, no matter what. Also the window that you get in paint and sculpt modes when pressing {key RMB} is unaffected by this bug, so that might be another clue for the possible cause.

Added subscriber: @erminos

Added subscriber: @erminos
Member

I wasn't able to recreate this on macOS. Could this be Windows only? In that case it may be related to the mouse input changes there, d5c59913de.

According to the description there's a 3 day window where this broke. The 3 last Windows specific changes listed here were done in that period: https://developer.blender.org/diffusion/B/history/master/intern/ghost/intern/GHOST_SystemWin32.cpp;b6aa8daf4983.

Would be good if somebody could pinpoint the exact commit that caused this.

I wasn't able to recreate this on macOS. Could this be Windows only? In that case it may be related to the mouse input changes there, d5c59913de. According to the description there's a 3 day window where this broke. The 3 last Windows specific changes listed here were done in that period: https://developer.blender.org/diffusion/B/history/master/intern/ghost/intern/GHOST_SystemWin32.cpp;b6aa8daf4983. Would be good if somebody could pinpoint the exact commit that caused this.

@JulianEisel I'll bisect it this evening.

@JulianEisel I'll bisect it this evening.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Added subscriber: @PrototypeNM1

Added subscriber: @PrototypeNM1

@PrototypeNM1 the commit that caused this was indeed d5c59913de.

@PrototypeNM1 the commit that caused this was indeed d5c59913de.

Added subscribers: @Eary, @Alumx

Added subscribers: @Eary, @Alumx
Nicholas Rishel self-assigned this 2021-02-04 17:18:47 +01:00

Added subscriber: @jackiejake

Added subscriber: @jackiejake

I couldn't recreate the issue but I suspect I know the cause. @rjg (or anyone else) could you apply P1963 and see if it resolves the issue?

If this doesn't work the issue may be the change in mouse repositioning.

I couldn't recreate the issue but I suspect I know the cause. @rjg (or anyone else) could you apply [P1963](https://archive.blender.org/developer/P1963.txt) and see if it resolves the issue? If this doesn't work the issue may be the change in mouse repositioning.

@PrototypeNM1 Doesn't fix it for me.

I had to enclose the

+      GHOST_PointerInfoWin32 &last = pointerInfo.back();
+      system->m_mousePosX = last.pixelLocation.x;
+      system->m_mousePosY = last.pixelLocation.y;
+
+      /* Set system cursor position so that mouse handling continues from last tablet position. */
+      system->setCursorPosition(last.pixelLocation.x, last.pixelLocation.y);
+

in scope {} otherwise I got a C2360 compile error. Might have applied it wrong or the patch itself might not work as expected?

@PrototypeNM1 Doesn't fix it for me. I had to enclose the ``` + GHOST_PointerInfoWin32 &last = pointerInfo.back(); + system->m_mousePosX = last.pixelLocation.x; + system->m_mousePosY = last.pixelLocation.y; + + /* Set system cursor position so that mouse handling continues from last tablet position. */ + system->setCursorPosition(last.pixelLocation.x, last.pixelLocation.y); + ``` in scope `{}` otherwise I got a C2360 compile error. Might have applied it wrong or the patch itself might not work as expected?

In #84701#1111904, @rjg wrote:
Might have applied it wrong or the patch itself might not work as expected?

My bad for uploading the patch before compiling, forgot to scope the declaration in the switch case. Once you added scope it should have been what I intended, so the bug is elsewhere.

> In #84701#1111904, @rjg wrote: > Might have applied it wrong or the patch itself might not work as expected? My bad for uploading the patch before compiling, forgot to scope the declaration in the switch case. Once you added scope it should have been what I intended, so the bug is elsewhere.

This issue was referenced by ab21009842

This issue was referenced by ab210098424bf53b1fdac3de2d016d3e4aa04bfe

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Thanks! Confirmed on Win7/10 - the problem is gone.

Thanks! Confirmed on Win7/10 - the problem is gone.
Thomas Dinges added this to the 2.92 milestone 2023-02-08 16:14:51 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84701
No description provided.